Project/objects/Apttus_Proposal__Proposal__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Active_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This marks define if the actual quotation is the active version or it is a deactive one (previous version of the same quotation)</inlineHelpText>
        <label>Active Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Aggregated_Estimated_Lead_Time__c</fullName>
        <inlineHelpText>Maximum (highest) of lead times from the shopping cart line items.</inlineHelpText>
        <label>Aggregated Estimated Lead Time</label>
        <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.APTS_Lead_Time__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus_Proposal__Proposal_Line_Item__c.APTS_Alternative_To__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Aggrg_Estimated_Transportation_Time__c</fullName>
        <label>Aggregated Estimated Transportation Time</label>
        <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.APTS_Estimated_Transportation_Time__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus_Proposal__Proposal_Line_Item__c.APTS_Alternative_To__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Alternative_Line_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternative Line Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Amount__c</fullName>
        <description>LP Spain</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_BU__c</fullName>
        <description>Business Unit name required in approval routing rules.</description>
        <label>Approval BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Rejection_Comment__c</fullName>
        <label>Approval Rejection Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Chevron should appear if this checkbox is checked LP Spain</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Approver_User_IDs__c</fullName>
        <description>semil-colon separated value of the approvers assigned for the quotation through approval process</description>
        <label>Approver User IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BAL_ID__c</fullName>
        <description>This field is unique identified for a product and its related factory where this product can be configure or relate to</description>
        <inlineHelpText>This field is unique identified for a product and its related factory where this product can be configure or relate to</inlineHelpText>
        <label>Sales Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CC_Type__c</fullName>
        <description>The purpose of this field to identify the currency conversion type from Factory Object  based on the ABB source location.</description>
        <label>CC Type</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
     <fields>   
        <fullName>APTS_Business_Line_BU__c</fullName>
        <inlineHelpText>Used to prefilter (BU specific) business line values. In case needed BU is not in picklist, no selection needs to be made.</inlineHelpText>
        <label>Business Line BU</label>
        <picklist>
            <picklistValues>
                <fullName>RMDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMDR</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>PACT</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>PAOG</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>PAPG</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Channel_Class_Level_1__c</fullName>
        <inlineHelpText>Channel classification of the Opportunity.</inlineHelpText>
        <label>Channel Class Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Channel_Class_Level_2__c</fullName>
        <label>Channel Class Level 2</label>
        <picklist>
            <picklistValues>
                <fullName>ABBPRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABBSYI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Cloned_From_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quotation from which the current quotation is cloned. Populated in case of cloned quotations only</description>
        <inlineHelpText>Quotation from which the current quotation is cloned. Populated in case of cloned quotations only</inlineHelpText>
        <label>Cloned From Quotation</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Cloned Quotations</relationshipLabel>
        <relationshipName>Cloned_Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Cloned_From_Label__c</fullName>
        <description>Created By : Parag Sharma
Purpose : To display ABB Quotation Number</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; APTS_Revised_From_ID__r.Id , IF( NOT( ISBLANK(APTS_Revised_From_ID__r.APTS_External_Revision__c) ) , 
APTS_Revised_From_ID__r.APTS_Quotation_Number_Internal__c + &quot;.&quot; + APTS_Revised_From_ID__r.APTS_External_Revision__c, 

APTS_Revised_From_ID__r.APTS_Quotation_Number_Internal__c 
))</formula>
        <label>Revised From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Combined_Fields_Quotation_1_1__c</fullName>
        <formula>&apos;ES&apos; + APTS_LP_Sales_Organization__c + TEXT(APTS_LP_Local_Channel__c) + TEXT(APTS_Sales_Office_Code__c) + APTS_GTV_Code__c + &apos;1&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APTS Combined Fields Quotation 1 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Combined_Fields_Quotation_1_2__c</fullName>
        <formula>&apos;ES&apos; + APTS_LP_Sales_Organization__c + TEXT(APTS_LP_Local_Channel__c) + TEXT(APTS_Sales_Office_Code__c) + APTS_GTV_Code__c + &apos;2&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APTS Combined Fields Quotation 1 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Combined_Fields_Quotation_Header__c</fullName>
        <formula>TEXT(APTS_Country__c) + APTS_LP_Sales_Organization__c + TEXT(APTS_LP_Local_Channel__c) + TEXT(APTS_Sales_Office_Code__c) + APTS_GTV_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APTS Combined Fields Quotation Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Concurrent_User_Email__c</fullName>
        <description>Created By : Parag Sharma
Purpose : JIRA Ticket # ABBPG-1928 for once User Started Configuration no other User can perform activity on Same Quotation</description>
        <label>Concurrent User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APTS_Control_System_Id__c</fullName>
        <label>Control System Id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Control_System_Maintenance_Level__c</fullName>
        <label>Control System Maintenance Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Count_Winner_Competitors__c</fullName>
        <description>Rollup summary field to count how many competitors were marked as winners.</description>
        <inlineHelpText>Rollup summary field to count how many competitors were marked as winners.</inlineHelpText>
        <label>Count Winner Competitors</label>
        <summaryFilterItems>
            <field>Competitor_CQP__c.APTS_Winning_Company__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Competitor_CQP__c.Quote_Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Cover_Page_Image__c</fullName>
        <label>Cover Page Image</label>
        <picklist>
            <picklistValues>
                <fullName>PGHV ECO GIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trafo - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trafo - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trafo - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trafo - 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Uploaded Cover Page Image</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Create_MSPA__c</fullName>
        <description>Create MSPA LP Spain</description>
        <formula>IF( 
AND( $User.Id == OwnerId, APTS_Is_MSPA_Created_Non_Buying_Qoute__c == FALSE,
OR(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Approved&apos;), 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Generated&apos;), 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Submitted&apos;),
ISPICKVAL( APTS_Quotation_Closed_Status__c, &apos;Won&apos;)
), 
NOT(APTS_Manually_Edited__c),
APTS_Is_Placeholder_Quote__c=FALSE,  
OR(NOT(ISBLANK(APTS_SAP_Customer_ID__c)),APTS_Quotation_Account_Type__c == $Label.ATPS_Primary_Partner,APTS_Quotation_Account_Type__c == $Label.APTS_Account_End_User)),
IF(OR(APTS_Quotation_Account_Type__c == $Label.ATPS_Primary_Partner, APTS_Quotation_Account_Type__c == $Label.APTS_Account_End_User),
HYPERLINK(&quot;/apex/APTS_RefreshAccountCustomerInfo?id=&quot;&amp;Id&amp;&quot;&amp;baseObject=Quotation&quot;&amp;&quot;&amp;name=&quot;&amp;APTS_LP_AccountCustomer__r.Name&amp;&quot;&amp;typeId=&quot;&amp; APTS_LP_AccountCustomer__r.RecordTypeId&amp;&quot;&amp;GUID=&quot;&amp; APTS_LP_AccountCustomer__r.GUID__c&amp;&quot;&amp;AccountType=&quot;&amp; APTS_Quotation_Account_Type__c
, IMAGE(&quot;/resource/APTS_CreateMSPA&quot;, &quot;Create MSPA From Scratch&quot;),&quot;_self&quot;), 
HYPERLINK(&quot;/apex/APTS_CustomActionNavigator?id=&quot; &amp;Id + &quot;&amp;action=createmspa&amp;objectType=Proposal&quot;, IMAGE(&quot;/resource/APTS_CreateMSPA&quot;, &quot;Create MSPA From Scratch&quot;),&quot;_self&quot;)),
IF(AND(APTS_Is_MSPA_Created_Non_Buying_Qoute__c == FALSE ,ISBLANK(APTS_SAP_Customer_ID__c)), &quot;No SAP ID is present. Please refresh&quot;, 
IF(AND(APTS_Is_MSPA_Created_Non_Buying_Qoute__c == FALSE,APTS_Manually_Edited__c), &quot;Manually modified LOD, please refresh&quot;, NULL)))</formula>
        <label>Create MSPA from Scratch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Create_MSPA_with_Changes__c</fullName>
        <formula>IF( 
AND( $User.Id == OwnerId,  APTS_Is_MSPA_Created_Non_Buying_Qoute__c == FALSE,
OR(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Approved&apos;), 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Generated&apos;), 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Submitted&apos;),
ISPICKVAL( APTS_Quotation_Closed_Status__c, &apos;Won&apos;)
), 
NOT(APTS_Manually_Edited__c),
APTS_Is_Placeholder_Quote__c=FALSE,  
OR(NOT(ISBLANK(APTS_SAP_Customer_ID__c)),APTS_Quotation_Account_Type__c == $Label.ATPS_Primary_Partner,APTS_Quotation_Account_Type__c == $Label.APTS_Account_End_User)),
IF(OR(APTS_Quotation_Account_Type__c == $Label.ATPS_Primary_Partner, APTS_Quotation_Account_Type__c == $Label.APTS_Account_End_User),
HYPERLINK(&quot;/apex/APTS_RefreshAccountCustomerInfo?id=&quot;&amp;Id&amp;&quot;&amp;baseObject=Quotation&quot;&amp;&quot;&amp;name=&quot;&amp;APTS_LP_AccountCustomer__r.Name&amp;&quot;&amp;typeId=&quot;&amp; APTS_LP_AccountCustomer__r.RecordTypeId&amp;&quot;&amp;GUID=&quot;&amp; APTS_LP_AccountCustomer__r.GUID__c&amp;&quot;&amp;AccountType=&quot;&amp; APTS_Quotation_Account_Type__c&amp;&quot;&amp;CopyWith=&quot;&amp;$Label.APTS_Without_Changes,IMAGE(&quot;/resource/APTS_CreateAgreementWithChanges&quot;, &quot;Create MSPA with Changes&quot;),&quot;_self&quot;), 
HYPERLINK(&quot;/apex/APTS_CustomActionNavigator?id=&quot; &amp;Id + &quot;&amp;action=createmspawithchange&amp;objectType=Proposal&quot;, IMAGE(&quot;/resource/APTS_CreateAgreementWithChanges&quot;, &quot;Create MSPA with Changes&quot;),&quot;_self&quot;)),
IF(AND(APTS_Is_MSPA_Created_Non_Buying_Qoute__c == FALSE,ISBLANK(APTS_SAP_Customer_ID__c)), &quot;No SAP ID is present. Please refresh&quot;, 
IF(AND(APTS_Is_MSPA_Created_Non_Buying_Qoute__c == FALSE,APTS_Manually_Edited__c), &quot;Manually modified LOD, please refresh&quot;, NULL)))</formula>
        <label>Create MSPA with Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Create_MSPA_without_Changes__c</fullName>
        <description>LP Spain</description>
        <formula>/*
IF ((AND(
OR(
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Approved&quot;),
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Presented&quot;)
),
NOT(OR(APTS_Manually_Edited__c,OR(ISNULL(APTS_SAP_Customer_ID__c),ISBLANK(APTS_SAP_Customer_ID__c))))
)) , HYPERLINK(&quot;/apex/APTS_MSPAWithoutChangesPage?id=&quot; &amp;Id + &quot;&amp;Flag=True&quot;, IMAGE(&quot;/resource/APTS_CreateAgreementWithoutChanges&quot;, &quot;Create MSPA without Changes&quot;),&quot;_self&quot;), NULL)
*/


IF( 
AND( 
OR(
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Approved&apos;), 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Generated&apos;), 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Submitted&apos;),
ISPICKVAL( APTS_Quotation_Closed_Status__c, &apos;Won&apos;)), 
NOT(APTS_Manually_Edited__c), 
NOT(ISBLANK(APTS_SAP_Customer_ID__c)), 
APTS_Quotation_Account_Type__c == $Label.APTS_Account_Customer, 
APTS_Is_MSPA_Created_Non_Buying_Qoute__c == FALSE,
APTS_Is_Placeholder_Quote__c =FALSE 
),HYPERLINK(&quot;/apex/APTS_CustomActionNavigator?id=&quot; &amp;Id + &quot;&amp;action=createmspawithoutchange&amp;objectType=Proposal&quot;, IMAGE(&quot;/resource/APTS_CreateAgreementWithoutChanges&quot;, &quot;Create MSPA without Changes&quot;),&quot;_self&quot;), 

IF(AND(APTS_Is_MSPA_Created_Non_Buying_Qoute__c == FALSE,ISBLANK(APTS_SAP_Customer_ID__c)), &quot;No SAP ID is present. Please refresh&quot;, 
IF(AND(APTS_Is_MSPA_Created_Non_Buying_Qoute__c == FALSE,APTS_Manually_Edited__c), &quot;Manually modified LOD, please refresh&quot;,null)))</formula>
        <label>Create MSPA without Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Incoterm_Destination__c</fullName>
        <inlineHelpText>The point in the transaction where the risk of loss or damage to the goods is transferred from the seller to the buyer.</inlineHelpText>
        <label>Customer Incoterm Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Incoterms__c</fullName>
        <label>Customer Incoterms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_PO_Date__c</fullName>
        <inlineHelpText>&quot;(Display only when the quote is closed)
 The customer purchase order date&quot;</inlineHelpText>
        <label>Customer PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_PO_Number__c</fullName>
        <inlineHelpText>&quot;(Display only when the quote is closed)
 The customer purchase order number&quot;</inlineHelpText>
        <label>Customer PO Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Payment_Terms__c</fullName>
        <inlineHelpText>Payment terms are the conditions under which a vendor completes a sale. It defines when the Customer will pay the Invoices.</inlineHelpText>
        <label>Customer Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Preference__c</fullName>
        <inlineHelpText>Represent the preference of the customer in buying from ABB or a competitor</inlineHelpText>
        <label>Customer Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Reference_ID_RFQ__c</fullName>
        <formula>Apttus_Proposal__Opportunity__r.RFQ_Customer_Reference_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Reference ID (RFQ)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Date_Weeks__c</fullName>
        <label>Date / Weeks?</label>
        <picklist>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Type__c</fullName>
        <description>Deal type of quotation</description>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel_Product__c</fullName>
        <description>Formula field to contain the same value as in Distribution channel field of Product object. This value is used in Search Filter (CPQ) to limit the product visibility based on Sales Organization and Distribution Channel for LP Spain.</description>
        <formula>IF( ISPICKVAL( APTS_LP_Distribution_Channel__c , &quot;NI&quot;) , &quot;NI&quot;, &quot;BT&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel(Product)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Distribution Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Distribution Channel</value>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Locale__c</field>
                <operation>equals</operation>
                <valueField>$Source.APTS_Locale__c</valueField>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.APTS_Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <formula>TEXT($User.Division_DIV__c)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_EAD_Confidence__c</fullName>
        <label>EAD Confidence</label>
        <picklist>
            <picklistValues>
                <fullName>No Delay Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slight Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substantial Delay Expected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_ERP_ID__c</fullName>
        <label>ERP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ERP_LN_Line_Items__c</fullName>
        <label>ERP_LN Line Items</label>
        <summaryFilterItems>
            <field>Apttus_Proposal__Proposal_Line_Item__c.APTS_Has_ERP_LN__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_End_Customer_GUID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LP Spain</description>
        <inlineHelpText>End User Project associated with the quotation</inlineHelpText>
        <label>End User Project</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>End_User_Project__c.End_User_Project_Status__c</field>
                <operation>notEqual</operation>
                <value>Closed, Cancelled</value>
            </filterItems>
            <filterItems>
                <field>$Source.APTS_Account_End_User__c</field>
                <operation>equals</operation>
                <valueField>End_User_Project__c.Account_End_User__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>QuotationsEndUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Delivery_Days__c</fullName>
        <inlineHelpText>An approximate due days for the Delivery of the products included in the quotation</inlineHelpText>
        <label>Estimated Delivery Days</label>
        <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.APTS_Delivery_Days__c</summarizedField>
        <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Delivery_Time__c</fullName>
        <description>LP Spain</description>
        <inlineHelpText>An approximate due date for the Delivery of the products included in the quotation</inlineHelpText>
        <label>Estimated Delivery Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Exceptions__c</fullName>
        <inlineHelpText>Any Clauses/Exceptions for this quotation.</inlineHelpText>
        <label>Exceptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_ExpectedStartDate_UK__c</fullName>
        <formula>IF(ISNULL(Apttus_Proposal__ExpectedStartDate__c), &quot;&quot;, TEXT(DAY(Apttus_Proposal__ExpectedStartDate__c)) +&quot;/&quot;+
IF((LEN(TEXT(MONTH(Apttus_Proposal__ExpectedStartDate__c)))=2), TEXT(MONTH(Apttus_Proposal__ExpectedStartDate__c)), (&quot;0&quot;+TEXT( MONTH(Apttus_Proposal__ExpectedStartDate__c))))
+&quot;/&quot;+ TEXT( YEAR(Apttus_Proposal__ExpectedStartDate__c)))</formula>
        <label>Expected Start Date UK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Award_Date_EAD__c</fullName>
        <label>Expected Award Date (EAD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Delivery_Date__c</fullName>
        <formula>APTS_Expected_Award_Date_EAD__c  +  APTS_FF_Estimated_Delivery_Days__c +  APTS_Aggrg_Estimated_Transportation_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_End_Date_Weeks__c</fullName>
        <formula>IF(ISBLANK(APTS_Generated_Date__c ) , 
((Apttus_Proposal__ExpectedEndDate__c  -  DATEVALUE(CreatedDate)) / 7), 
((Apttus_Proposal__ExpectedEndDate__c - APTS_Generated_Date__c ) / 7)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected End Date Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Start_Date_FR__c</fullName>
        <formula>IF(ISNULL(Apttus_Proposal__ExpectedStartDate__c), 
  &quot;&quot;,
  IF((LEN(TEXT(DAY(Apttus_Proposal__ExpectedStartDate__c)))=2),
    TEXT(DAY(Apttus_Proposal__ExpectedStartDate__c)),
    (&quot;0&quot;+TEXT(DAY(Apttus_Proposal__ExpectedStartDate__c)))) +&quot;-&quot;+
  IF((LEN(TEXT(MONTH(Apttus_Proposal__ExpectedStartDate__c)))=2), 
    TEXT(MONTH(Apttus_Proposal__ExpectedStartDate__c)), 
    (&quot;0&quot;+TEXT( MONTH(Apttus_Proposal__ExpectedStartDate__c))))
  +&quot;-&quot;+ TEXT( YEAR(Apttus_Proposal__ExpectedStartDate__c)))</formula>
        <label>Expected Start Date FR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Export_Cart__c</fullName>
        <formula>IF( 

AND(
APTS_Template__c= false,


OR( 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Draft&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Approved&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Rejected&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Generated&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Submitted to Customer&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Won&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Lost&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Cancelled&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Lost Without ABB Bid&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Order Pending&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Partially Ordered&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Order Pending&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Ordered&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Validity Expired&quot;) 
))  , 

HYPERLINK(&quot;/apex/APTS_ExportCart?id=&quot; &amp;Id&amp;&quot;&amp;format=XML&amp;ad_sid=&quot;&amp;$Label.APTS_Export_cart_sID, IMAGE(&quot;/resource/APTS_Export_Cart&quot;, &quot;Export Cart&quot;),&quot;_self&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Export Cart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Export_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The user can flag this field if the export control is needed before delivery of the goods to the customer.</inlineHelpText>
        <label>Export Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ExtConfigDt__c</fullName>
        <description>External Configuration Date</description>
        <label>External Configuration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_External_Revision__c</fullName>
        <inlineHelpText>Review of the quotation initiate on customer request (automatically incremented with letters and included in the documents layout)</inlineHelpText>
        <label>External Customer Revision</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_Version__c</fullName>
        <label>External Version</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FACE_REF_ID__c</fullName>
        <formula>IF(ISBLANK(APTS_FACE_Reference_No__c),Id,APTS_FACE_Reference_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FACE REF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FACE_Reference_No__c</fullName>
        <label>FACE Reference No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FA_Valid_From_Date__c</fullName>
        <description>This is to be used with Frame Agreements and may be replaced. Using for demo purposes.</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
        <fields>
        <fullName>APTS_FF_Estimated_Delivery_Days__c</fullName>
        <description>Used for CCP replacement.</description>
        <formula>APTS_Aggregated_Estimated_Lead_Time__c +  APTS_Aggrg_Estimated_Transportation_Time__c</formula>
        <inlineHelpText>Expected delivery date of the offering if customer places the order. 
Calc field-From the Quote Creation Date, calculated using the higher Estimated Delivery Time of the Items; 
Line: Estimated delivery date calculated as Lead time + Transportation time</inlineHelpText>
        <label>Estimated Delivery Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>